# radish

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  client.cpp  client.h
lib/: CMakeLists.txt  foundation.h  kv_misc.h  lib.cpp  message.h  serialization.h  stream_wrapper.h
lib/client/: async_client.cpp  async_client.h  client.cpp  client.h
samples/: CMakeLists.txt  client.cpp  client_spawner.cpp  combined_kv_client_server.cpp  event_loop_kv_storage_client.cpp  event_loop_kv_storage_client_spawner.cpp
service/: CMakeLists.txt  event_loop_kv_storage.cpp  foundation.h  main.cpp  service.cpp  service.h
test/: CMakeLists.txt  binary_serialization.cpp  main.cpp  message_serialization.cpp  stream_wrapper_serialization_test.cpp
